# ealta

./: .dockerignore  .env.example  .envrc  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  deploy.yml
birdnet/: listen.py  push.py
dashboard/: .gitignore  .prettierignore  .rubocop.yml  Gemfile  Procfile.full  README.md  eslint.config.mjs  package.json  tsconfig.json
dashboard/app/controllers/: admin_controller.rb  application_controller.rb  collage_controller.rb  enrichment_controller.rb  favourites_controller.rb  ingest_controller.rb  jobs_base_controller.rb  ses_notifications_controller.rb  sessions_controller.rb  station_assets_controller.rb  subscriptions_controller.rb
dashboard/app/helpers/: application_helper.rb
dashboard/app/jobs/: daily_email_sweep.rb  generate_illustration_job.rb  prepare_species_content_job.rb  species_content_sweep_job.rb  warm_today_summary_job.rb
dashboard/app/models/: day_note.rb  detection.rb  device_vital.rb  email_suppression.rb  enrichment_bundle.rb  event.rb  heartbeat.rb  journal_entry.rb  setting.rb  source_fetch_log.rb  species_info.rb  subscription.rb  user.rb
dashboard/app/presenters/: collage_presenter.rb
dashboard/app/serializers/: account_serializer.rb  admin_serializer.rb
dashboard/app/services/: admin_health.rb  alert_engine.rb  almanac.rb  bedrock.rb  bird_lore.rb  bird_mask.rb  bird_name.rb  blast.rb  conservation.rb  daily_digest.rb  daily_facts.rb  daily_letter.rb  data_reset.rb  day_hero.rb  day_lore.rb  day_narrator.rb  detection_correction.rb  digest_facts.rb  digest_summary.rb  enrichment_gate.rb  feilire.rb  feilire_lore.rb  hero_card.rb  illustrations.rb  listener_control.rb  mask_packer.rb  moon_phase.rb  notifier.rb  place_lore.rb  prompts.rb  sns_message_verifier.rb  song_sample.rb  sparkline.rb  species_catalog.rb  station.rb  station_profile.rb  today_card.rb  today_summary.rb
dashboard/config/: application.rb  credentials.yml.enc  database.yml  puma.rb  queue.yml  recurring.yml  routes.rb
dashboard/config/environments/: cloud.rb  development.rb  production.rb
dashboard/config/initializers/: content_security_policy.rb  omniauth.rb
dashboard/config/prompts/: day_note.system.md  enrichment.system.md  place.system.md
dashboard/db/: schema.rb  seeds.rb
dashboard/db/migrate/: 20260629093120_create_detections.rb  20260630120000_create_species_infos.rb  20260630130000_add_irish_description_to_species_infos.rb  20260630140000_add_song_to_species_infos.rb  20260701090000_add_dedupe_key_to_detections.rb  20260703120000_create_users.rb  20260704090000_create_subscriptions.rb  20260704090100_create_events.rb  20260704090200_add_token_to_subscriptions.rb  20260705120000_add_cadence_to_subscriptions.rb  20260705130000_add_last_digest_on_to_users.rb  20260705140000_create_enrichment_tables.rb  20260705150000_fold_immediate_into_digest.rb  20260705160000_create_solid_queue_tables.rb  20260705170000_create_settings.rb  20260705180000_create_heartbeats.rb  20260705190000_add_dedupe_key_to_heartbeats.rb  20260708120000_create_journal_entries.rb  20260716120000_add_hero_to_journal_entries.rb  20260716130000_add_photo_to_species_infos.rb  20260716140000_add_coverage_to_journal_entries.rb  20260717120000_add_email_deliverability.rb  20260719120000_create_day_notes.rb  20260720120000_create_device_vitals.rb
dashboard/lib/tasks/: almanac.rake  db_backup.rake  detections.rake  digest.rake  doctor.rake  enrichment.rake  species.rake  summary.rake
dashboard/spec/: rails_helper.rb
dashboard/spec/factories/: detections.rb  device_vitals.rb  events.rb  heartbeats.rb  subscriptions.rb  users.rb
dashboard/spec/jobs/: daily_email_sweep_spec.rb  generate_illustration_job_spec.rb  species_content_sweep_job_spec.rb
dashboard/spec/lib/: icon_subset_spec.rb
dashboard/spec/models/: detection_spec.rb  email_suppression_spec.rb  enrichment_bundle_spec.rb  event_spec.rb  heartbeat_spec.rb  journal_entry_spec.rb  setting_spec.rb  species_info_spec.rb  (+1 more)
deploy/: DEPLOY.md  Dockerfile.armcheck  Dockerfile.armcheck.dockerignore  ealta-almanac.service  ealta-almanac.timer  ealta-frame.service  ealta-frame.timer  ealta-listener.service  ealta-litestream.service  ealta-push.plist  ealta-push.service  ealta-push.timer  ealta-restore.service  ealta-summary.service  ealta-summary.timer  ealta-web.service  litestream.yml  provision.sh  restore-if-needed.sh
docs/: FORK.md
infrastructure/: README.md  backend.hcl.example  cdn.tf  data.tf  device.tf  ecr.tf  ecs.tf  github_oidc.tf  illustrations.tf  outputs.tf  rds.tf  secrets.tf  ses.tf  terraform.tfvars.example  variables.tf  versions.tf
model/: conservation_ie.json
model/l18n/: labels_ga.json
pipeline/scripts/: README.md  art.py  build_masks.py  build_web_variants.py  cutout.py  cutout_flood.py  flatgen.py  irish_labels.py  pregen.py  prompt.template.md  requirements.txt  species-notes.json  verify.py
shooter/: inky_selftest.py  shoot.py
stations/example/: sources.yml  station.yml
(+156 files in other folders)
